<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.winedroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.winedroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.winedroid.ui.perfil.PerfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_escanear"
        android:name="com.example.winedroid.ui.perfil.PerfilFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_perfil" />
</navigation>